--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@ layout: default
     <img width="200px" height="200px" src="img/logo.svg"/>
   <h1>Dasom</h1>
   <h3>A multilingual input method framework<h3>
+    <a href="{{ "/about/" | prepend: site.baseurl }}">
     <button type="button" class="btn btn-default btn-lg">Learn More</button>
+  </a>
+  <a href="{{ "/installation/" | prepend: site.baseurl }}">
     <button type="button" class="btn btn-default btn-lg">Get Dasom</button>
+  </a>
   </section>
   <div class="home-content">
   <h2>News</h2>
