--- a/archive.html
+++ b/archive.html
@@ -17,7 +17,7 @@ permalink: /archive/
           <h3>{{ post.date | date: '%Y' }}</h3>
         {% endif %}
       {% endunless %}
-      <p>{{ post.date | date: "%Y.%m.%d" }} | <a href="{{ post.url }}">{{ post.title }}</a>{% if page.author %} | {{ page.author }} {% endif %}</p>
+      <p>{{ post.date | date: "%Y.%m.%d" }} | <a href="{{ post.url }}">{{ post.title }}</a>{% if post.author %} | {{ post.author }} {% endif %}</p>
     {% endfor %}
 </div>
 </div>
