--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
   <h1>Dasom</h1>
   <h3>A multilingual input method framework<h3>
     <a href="{{ "/about/" | prepend: site.baseurl }}">
-    <button type="button" class="btn btn-default btn-lg">Learn More</button>
+    <button type="button" class="btn btn-default btn-lg btn-outline-inverse">Learn More</button>
   </a>
   <a href="{{ "/installation/" | prepend: site.baseurl }}">
     <button type="button" class="btn btn-default btn-lg">Get Dasom</button>
