--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
     <a href="{{ "/about/" | prepend: site.baseurl }}">
     <button type="button" class="btn btn-lg btn-default">Learn More</button>
   </a>
-  <a href="{{ "/installation/" | prepend: site.baseurl }}">
+  <a href="{{ "/get-dasom/" | prepend: site.baseurl }}">
     <button type="button" class="btn btn-lg btn-default">Get Dasom</button>
   </a>
   </section>
